--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,17 +20,17 @@
             android:name=".activity.SplashActivity"
             android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">
 <!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
+<!--                            <action android:name="android.intent.action.MAIN" />-->
 
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
-<!--            </intent-filter>-->
+<!--                            <category android:name="android.intent.category.LAUNCHER" />-->
+<!--                        </intent-filter>-->
         </activity>
         <activity android:name=".activity.MainActivity" >
             <intent-filter>
-                            <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN" />
 
-                            <category android:name="android.intent.category.LAUNCHER" />
-                        </intent-filter>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
 
         <service
@@ -48,6 +48,8 @@
                 android:resource="@xml/accessibility_service_config" />
         </service>
 
+
+        <service android:name=".floatingview.FloatingLayoutService" />
     </application>
 
 </manifest>
