--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
 
     <uses-permission android:name="android.permission.BIND_ACCESSIBILITY_SERVICE" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+    <!-- Foreground Service permission(API level 28 or higher) -->
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
 
     <application
@@ -20,12 +22,12 @@
             android:name=".activity.SplashActivity"
             android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">
 <!--            <intent-filter>-->
-<!--                            <action android:name="android.intent.action.MAIN" />-->
+            <!--                <action android:name="android.intent.action.MAIN" />-->
 
-<!--                            <category android:name="android.intent.category.LAUNCHER" />-->
-<!--                        </intent-filter>-->
+            <!--                <category android:name="android.intent.category.LAUNCHER" />-->
+            <!--            </intent-filter>-->
         </activity>
-        <activity android:name=".activity.MainActivity" >
+        <activity android:name=".activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -37,7 +39,7 @@
             android:name=".services.CustomAccessibilityService"
             android:enabled="true"
             android:exported="true"
-            android:label="@string/app_name_accessibility"
+            android:label="@string/app_name"
             android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE">
             <intent-filter>
                 <action android:name="android.accessibilityservice.AccessibilityService" />
@@ -48,8 +50,10 @@
                 android:resource="@xml/accessibility_service_config" />
         </service>
 
-
-        <service android:name=".floatingview.FloatingLayoutService" />
+        <service android:name=".floatingview.general.FloatingLayoutService" />
+        <service
+            android:name=".floatingview.credibility.services.CredibilityCheckerService"
+            android:exported="true" />
     </application>
 
 </manifest>
