--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.theshoremedia">
 
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.BIND_ACCESSIBILITY_SERVICE" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
     <!-- Foreground Service permission(API level 28 or higher) -->
@@ -9,6 +10,7 @@
 
 
     <application
+        android:name=".AppController"
         android:allowBackup="true"
         android:icon="@drawable/ic_logo"
         android:label="@string/app_name"
@@ -21,19 +23,13 @@
         <activity
             android:name=".activity.SplashActivity"
             android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
-
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
-<!--            </intent-filter>-->
-        </activity>
-        <activity android:name=".activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".activity.MainActivity" />
 
         <service
             android:name=".services.CustomAccessibilityService"
@@ -50,9 +46,9 @@
                 android:resource="@xml/accessibility_service_config" />
         </service>
 
-        <service android:name=".floatingview.general.FloatingLayoutService" />
+        <service android:name="com.theshoremedia.modules.floatingview.general.FloatingLayoutService" />
         <service
-            android:name=".floatingview.credibility_checker.services.CredibilityCheckerService"
+            android:name="com.theshoremedia.modules.floatingview.credibility_checker.services.CredibilityCheckerService"
             android:exported="true" />
     </application>
 
