--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,4 +88,6 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment-ktx:$rootProject.navigationVersion"
     implementation "androidx.navigation:navigation-ui-ktx:$rootProject.navigationVersion"
 
+    implementation "androidx.preference:preference:1.0.0"
+
 }
