--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,5 +89,6 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:$rootProject.navigationVersion"
 
     implementation "androidx.preference:preference:1.0.0"
+    implementation 'com.orhanobut:logger:2.2.0'
 
 }
