--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,13 +4,10 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.BIND_ACCESSIBILITY_SERVICE" />
-    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
-    <!-- Foreground Service permission(API level 28 or higher) -->
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" /> <!-- Foreground Service permission(API level 28 or higher) -->
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
-    <uses-permission  android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS"/>
+    <uses-permission android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-
-
 
     <application
         android:name=".AppController"
@@ -20,28 +17,33 @@
         android:roundIcon="@drawable/ic_logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+<!--        <activity-->
+<!--            android:name=".activity.ShoreChecksActivity"-->
+<!--            android:label="@string/check_it_with_shore">-->
+
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.PROCESS_TEXT" />-->
+<!--                <category android:name="android.intent.category.DEFAULT" />-->
+<!--                <data android:mimeType="text/plain" />-->
+<!--            </intent-filter>-->
+<!--        </activity>-->
         <activity
             android:name=".activity.IntroScreenActivity"
             android:theme="@style/Theme.AppCompat.DayNight.NoActionBar" />
         <activity
             android:name=".activity.SplashActivity"
             android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">
-<!--                        <intent-filter>-->
-            <!--                            <action android:name="android.intent.action.MAIN" />-->
 
-            <!--                            <category android:name="android.intent.category.LAUNCHER" />-->
-            <!--                        </intent-filter>-->
-        </activity>
-        <activity android:name=".activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".activity.MainActivity"/>
 
         <service
-            android:name="com.theshoremedia.services.CustomAccessibilityService"
+            android:name=".services.CustomAccessibilityService"
             android:label="@string/app_name"
             android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE">
             <intent-filter>
@@ -52,21 +54,17 @@
                 android:name="android.accessibilityservice"
                 android:resource="@xml/accessibility_service_config" />
         </service>
-
-        <service android:name="com.theshoremedia.modules.floatingview.general.FloatingLayoutService" />
-        <service
-            android:name="com.theshoremedia.modules.floatingview.credibility_checker.services.CredibilityCheckerService"
-            />
+        <service android:name=".modules.floatingview.general.FloatingLayoutService" />
+        <service android:name=".modules.floatingview.credibility_checker.services.CredibilityCheckerService" />
 
         <receiver android:name=".modules.floatingview.credibility_checker.services.CredibilityCheckerReceiver">
             <intent-filter android:priority="999">
                 <action android:name="com.theshoremedia.cancel" />
             </intent-filter>
         </receiver>
-
         <receiver android:name=".receiver.BootReceiver">
             <intent-filter>
-                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
     </application>
