--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,6 +57,13 @@
         </service>
         <service android:name=".modules.floatingview.general.FloatingLayoutService" />
         <service android:name=".modules.floatingview.credibility_checker.services.CredibilityCheckerService" />
+        <service
+            android:name="com.theshoremedia.firebase.MyFirebaseMessagingService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
 
         <receiver android:name=".modules.floatingview.credibility_checker.services.CredibilityCheckerReceiver">
             <intent-filter android:priority="999">
@@ -68,6 +75,7 @@
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
+
     </application>
 
 </manifest>
