--- a/app/build.gradle
+++ b/app/build.gradle
@@ -112,4 +112,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics:17.5.0'
     implementation 'com.google.firebase:firebase-messaging:20.2.4'
 
+    //chrome-tab
+    implementation "androidx.browser:browser:1.2.0"
+
+    implementation 'com.chauthai.swipereveallayout:swipe-reveal-layout:1.4.1'
+
 }
