Unit testing issues fixes
- Toolbar center alignment issue fixed
- Navigation graph linking issue fixed
- SVG image loading issue fixed

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,7 @@ repositories {
     google()
     jcenter()
     maven { url "https://jitpack.io" }
+    mavenCentral()
 }
 
 dependencies {
@@ -116,5 +117,7 @@ dependencies {
     implementation "androidx.browser:browser:1.2.0"
 
     implementation 'com.chauthai.swipereveallayout:swipe-reveal-layout:1.4.1'
+    implementation("io.coil-kt:coil:0.11.0")
+    implementation("io.coil-kt:coil-svg:0.11.0")
 
 }
